// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pages Notes should display the activity indicator in the footer if it is fetching 1`] = `
<ForwardRef(View)
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {
        "marginVertical": 20,
      },
    ]
  }
>
  <_class
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    indeterminate={true}
    size="large"
    style={
      Object {
        "height": 36,
        "width": 36,
      }
    }
    styleAttr="Normal"
  />
</ForwardRef(View)>
`;

exports[`Pages Notes should renders correctly with notes and fetching 1`] = `
<ForwardRef(View)
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    onBack={[MockFunction]}
    rightAction={[MockFunction]}
    rightIcon="add"
    rightTitle="Add"
    title="Notes"
  />
  <FlatList
    ListFooterComponent={[Function]}
    data={
      Array [
        Object {
          "body": "My body",
          "created_at": "1991-12-17",
        },
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReached={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    onEndReachedThreshold={0.5}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</ForwardRef(View)>
`;

exports[`Pages Notes should renders correctly with notes and fetching 2`] = `
<TouchableOpacity
  activeOpacity={0.2}
  style={
    Object {
      "backgroundColor": "white",
      "borderBottomWidth": 0.5,
      "borderColor": "#E2E4E5",
      "paddingHorizontal": 15,
      "paddingVertical": 20,
    }
  }
>
  <ForwardRef(View)
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <ForwardRef(Text)
      style={
        Object {
          "flex": 1,
          "fontSize": 12,
          "marginBottom": 8,
        }
      }
    >
      December 17, 1991
    </ForwardRef(Text)>
  </ForwardRef(View)>
  <ForwardRef(Text)>
    My body
  </ForwardRef(Text)>
</TouchableOpacity>
`;

exports[`Pages Notes should renders correctly with notes and fetching 3`] = `
<ForwardRef(View)
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    onBack={[MockFunction]}
    rightAction={[MockFunction]}
    rightIcon="add"
    rightTitle="Add"
    title="Notes"
  />
  <FlatList
    ListFooterComponent={[Function]}
    data={
      Array [
        Object {
          "body": "My body",
          "created_at": "1991-12-17",
        },
        Object {
          "body": "My body 2",
          "created_at": "1993-12-17",
        },
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReached={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    onEndReachedThreshold={0.5}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</ForwardRef(View)>
`;

exports[`Pages Notes should renders correctly with notes and fetching 4`] = `
<TouchableOpacity
  activeOpacity={0.2}
  style={
    Object {
      "backgroundColor": "white",
      "borderBottomWidth": 0.5,
      "borderColor": "#E2E4E5",
      "paddingHorizontal": 15,
      "paddingVertical": 20,
    }
  }
>
  <ForwardRef(View)
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <ForwardRef(Text)
      style={
        Object {
          "flex": 1,
          "fontSize": 12,
          "marginBottom": 8,
        }
      }
    >
      December 17, 1991
    </ForwardRef(Text)>
  </ForwardRef(View)>
  <ForwardRef(Text)>
    My body
  </ForwardRef(Text)>
</TouchableOpacity>
`;

exports[`Pages Notes should renders correctly with notes and fetching 5`] = `
<TouchableOpacity
  activeOpacity={0.2}
  style={
    Object {
      "backgroundColor": "white",
      "borderBottomWidth": 0.5,
      "borderColor": "#E2E4E5",
      "paddingHorizontal": 15,
      "paddingVertical": 20,
    }
  }
>
  <ForwardRef(View)
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <ForwardRef(Text)
      style={
        Object {
          "flex": 1,
          "fontSize": 12,
          "marginBottom": 8,
        }
      }
    >
      December 17, 1993
    </ForwardRef(Text)>
  </ForwardRef(View)>
  <ForwardRef(Text)>
    My body 2
  </ForwardRef(Text)>
</TouchableOpacity>
`;

exports[`Pages Notes should renders correctly without notes and fetching 1`] = `
<ForwardRef(View)
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    onBack={[MockFunction]}
    rightAction={[MockFunction]}
    rightIcon="add"
    rightTitle="Add"
    title="Notes"
  />
  <FlatList
    ListFooterComponent={[Function]}
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReached={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    onEndReachedThreshold={0.5}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</ForwardRef(View)>
`;

exports[`Pages Notes should renders correctly without notes and not fetching 1`] = `
<ForwardRef(View)
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    onBack={[MockFunction]}
    rightAction={[MockFunction]}
    rightIcon="add"
    rightTitle="Add"
    title="Notes"
  />
  <EmptyActivity
    image={1}
    subtitle="Just write down what you have in mind."
    title="Notes are great to record precious details about your contacts."
  />
</ForwardRef(View)>
`;
